# textgrid-labeler

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  texgrid_labeler.py
.github/workflows/: build.yml  release.yml
src/textgrid_labeler/: HELP.txt  __init__.py  __main__.py  app.py  audio.py  drawing.py  events.py  file_ops.py  playback.py  search.py  ui.py  view.py
