[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "textgrid-labeler"
version = "1.0.0"
description = "A cross-platform GUI tool for viewing and annotating Praat TextGrid files alongside waveform audio."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "textgrid",
]

[project.urls]
Repository = "https://github.com/atonyxu/textgrid-labeler"

[tool.setuptools.packages.find]
where = ["src"]
